changes done fro axiom

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Movies App</title>
+    <style>
+      .input-icon{
+        position: absolute;
+        right: 10px;
+        top: calc(50% - 0.5em); /* Keep icon in center of input, regardless of the input height */
+      }
+      input{
+        padding-left: 17px;
+      }
+      .input-wrapper{
+        position: relative;
+      }
+    </style>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
